# attn_ft

./: .gitignore  README.md  on_start.sh  pyproject.toml
configs/: minicpmv25_attn_ft.yaml  qwen3_vl_2b_attn_ft.yaml  qwen3_vl_8b_attn_ft.yaml  qwen3_vl_8b_attn_ft_ce.yaml  qwen3_vl_8b_attn_ft_vacuum.yaml
scripts/: on_start.sh  setup_env.sh  train.sh
src/attn_ft/: __init__.py  attn_hooks.py  config.py  data.py  losses.py  models.py  peft_to_hf_model.py  train.py
